[package]
name = "showcase"
version = "0.1.0"
authors = ["leang27 <hangleang127@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"
yewtil = "0.3"
yewind = { path = "../..", features = ["button"] }